RESOLVED FIXED53500
Web Inspector: [Chromium] Heap snapshots are not preserved on "Back" button click when no CPU profiles gathered
https://bugs.webkit.org/show_bug.cgi?id=53500
Summary Web Inspector: [Chromium] Heap snapshots are not preserved on "Back" button c...
Mikhail Naganov
Reported 2011-02-01 09:13:46 PST
http://code.google.com/p/chromium/issues/detail?id=71560 What steps will reproduce the problem? 1. Open google.com. 2. Click "Images" link (to populate history with a same-domain link. 3. Open DevTools. 4. Gather a heap profile. 5. Click "Back" button in browser. 6. Heap profile is removed. If before step 5 a CPU profile was also gathered, heap profile remains -- this is the correct behavior. The fix is easy -- check if we have heap snapshots gathered the same way we are checking for CPU profiles.
Attachments
patch (1.22 KB, patch)
2011-02-01 09:18 PST, Mikhail Naganov
pfeldman: review+
mnaganov: commit-queue-
Mikhail Naganov
Comment 1 2011-02-01 09:18:26 PST
Mikhail Naganov
Comment 2 2011-02-01 09:23:28 PST
Manually committed http://trac.webkit.org/changeset/77254 2011-02-01 Mikhail Naganov <mnaganov@chromium.org> Reviewed by Pavel Feldman. Web Inspector: Fix profiles reset to avoid clearing heap profiles in Chromium. https://bugs.webkit.org/show_bug.cgi?id=53500 * inspector/InspectorProfilerAgent.cpp: (WebCore::InspectorProfilerAgent::resetFrontendProfiles):
Note You need to log in before you can comment on or make changes to this bug.