2011-02-01  Mikhail Naganov  <mnaganov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: Fix profiles reset to avoid clearing heap profiles in Chromium.

        https://bugs.webkit.org/show_bug.cgi?id=53500

        * inspector/InspectorProfilerAgent.cpp:
        (WebCore::InspectorProfilerAgent::resetFrontendProfiles):

Canonical link: https://commits.webkit.org/67367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77254 268f45cc-cd09-0410-ab3c-d52691b4dbfc